fix: move style rules around to make stylesheet more readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,31 @@ section {
     border-radius: 10px;
 }
 
+#game-canvas {
+    height: 40vh;
+    margin: 10px;
+    background-color: var(--black);
+    max-width: 90%;
+    border-radius: 10px;
+}
+
+/* scene text class rules */
+.scene-text-div {
+    width: 100%;
+    max-height: 20vh;
+    padding: 20px 0;
+    color: var(--off-white);
+    font-size: 20px;
+    background-color: var(--black);
+    text-align: center;
+    vertical-align: middle;
+    overflow: auto;
+}
+
+#scene-text {
+    margin-bottom: 0;
+}
+
 .controls-container {
     background-color: var(--black-game);
     width: 80%;
@@ -82,22 +107,7 @@ nav {
 }
 }
 
-.scene-text-div {
-    width: 100%;
-    max-height: 20vh;
-    padding: 20px 0;
-    color: var(--off-white);
-    font-size: 20px;
-    background-color: var(--black);
-    text-align: center;
-    vertical-align: middle;
-    overflow: auto;
-}
-
-#scene-text {
-    margin-bottom: 0;
-}
-
+/* modal class rules */
 .modal-content {
     background-color: var(--black-header);
     color: var(--off-white);
